welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
   	if (vuBiscuit==true){
        ^