welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit:Boolean = false
def haveBaggle():Boolean = {
  for (compteur <- 1 to 6){
    if (estSurBiscuit()){
      vuBiscuit=true
    }
  }
   for (compteur <- 1 to 6){
     recule()
   }
   	if (vuBiscuit==true){
      return
    }
}